Added blog and other useful techniques for HTML

--- a/boot.html
+++ b/boot.html
@@ -1,1 +1,131 @@
+ <!DOCTYPE html>
+ <html>
+ <head>
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+ <link rel="stylesheet" type="text/css" href="boot.css">
+	<title>
+
+ 	<title></title>
+ </head>
+ <body class="chrome chrome-51 mac body-webkit-scrollbars body-custom-board-background body-dark-board-background body-board-view" style="background-image: url(&quot;https://trello-backgrounds.s3.amazonaws.com/53baf533e697a982248cd73f/4200x4200/48dbf0b5a546541e847e267a5dcd2201/shutterstock_134707556.jpg&quot;);"> <textarea tabindex="-1" style="position: absolute; top: -999px; left: 0px; right: auto; bottom: auto; border: 0px; padding: 0px; box-sizing: content-box; word-wrap: break-word; overflow: hidden; transition: none; height: 0px !important; min-height: 0px !important; font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif; font-size: 14px; font-weight: bold; font-style: normal; letter-spacing: 0px; text-transform: none; word-spacing: 0px; text-indent: 0px; white-space: pre-wrap; line-height: 18px; width: 240px;" class="autosizejs" id="autosizejs"></textarea>
  
+
+
+
+   <div class="container-fluid">
+  <div id="header" class="row">
+<div class="col-sm-3">
+
+<nav class="promo-nav">
+	<a class="promo-nav-button" href="/">Home</a>
+	<a class="promo-nav-button" href="/tour">Tour</a>
+	<a class="promo-nav-button" href="http://blog.trello.com" target="_blank">Blog</a>
+
+</nav>
+    </div> 
+
+
+    <div id="logos" class="col-sm-6">
+    <a class="header-logo js-home-via-logo" href="/" aria-label="Trello Home"><span class="header-logo-loading">  </span><span class="header-logo-default"> </span>   </a>
+
+    <span class="header-logo-loading"></span>
+
+
+    </div>
+
+    <div class="col-sm-3 header-user">
+    <a class="header-btn header-signup" href="/signup?returnUrl=%2Fb%2FDnZvFigA%2Fagile-board">Sign Up</a>
+    <a class="header-btn header-login no-right-margin" href="/login?returnUrl=%2Fb%2FDnZvFigA%2Fagile-board">Log In</a>
+
+
+
+    </div><!-- right controls -->
+  
+
+  </div> <!-- top bar -->
+
+  <div class="row">
+
+
+<div class="col-sm-9">
+
+    </div><!-- board lists -->
+
+    <div class="col-sm-3">
+<div class="board-menu js-fill-board-menu"><div class="board-menu-container">
+
+<div class="board-menu-header js-board-menu-title is-board-menu-default-view is-in-frame"><a class="board-menu-header-back-button icon-lg icon-back js-pop-widget-view" href="#" title="Go back.">
+	
+</a>
+<h3 class="board-menu-header-title js-board-menu-title-text">Menu</h3>
+<a class="board-menu-header-close-button icon-lg icon-close js-hide-sidebar" href="#" title="Close the board menu."></a>
+<hr class="board-menu-header-divider">
+
+
+<div class="board-menu-content u-fancy-scrollbar js-board-menu-content-wrapper">
+<div class="board-menu-content-frame">
+<p class="error js-file-too-large" style="margin: 12px 0 6px; display:none;">File too large. 10mb limit.</p>
+<div class="board-menu-member-section js-list-members is-hidden is-partial-row">
+<div class="board-menu-member-section-header js-heading is-hidden"> Members 
+<div board-menu-member-section-header" style="position: fixed;  left: 380px; width: 100%;">
+     <ul>
+         <li class="active"><a href="#filter_cards" id="madd">Filter Cards</a></li>
+         <li><a href="#more" id="more">More</a></li>
+      
+     </ul>
+</div>  
+</div>
+
+<div class="u-clearfix js-list"></div>
+
+
+<div class="board-menu-member-section js-list-team-members is-partial-row">
+<div class="board-menu-member-section-header js-heading is-hidden">
+    </div>
+ </div><!-- board content -->
+<div class="board-wrapper is-show-menu"><div class="board-main-content"><div class="board-header u-clearfix js-board-header"> 
+<div class="board-main-content"> 
+
+
+<div class="board-header u-clearfix js-board-header">
+</div>
+</div>
+
+</div>
+</div>
+
+
+
+
+
+<!-- 
+
+<a class="btn btn-primary" href="/pizza.html">Go to my pizza page</a>
+
+
+
+<div class="alert alert-success">
+  <strong>Here we go!</strong>
+  Your order was placed successfully.
+</div>
+
+<form>
+  <div class="form-group">
+    <label>Email address</label>
+    <input type="email" class="form-control">
+  </div>
+
+  <button type="submit" class="btn btn-default">
+    Submit
+  </button>
+  <button class="btn btn-default">Click me to die!</button>
+</form>
+
+<button type="button" class="close">
+  <span>&times;</span>
+</button>
+<span class="caret">   yo </span>
+ -->
+ </body>
+ </html>
