--- a/blog.html
+++ b/blog.html
@@ -2,23 +2,25 @@
  <html>
  <head>
    <link rel="stylesheet" type="text/css" href="blog.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
  	<title>Jonathan's Blog</title>
  </head>
  <body>
 
  <header>	
-  
+  <img src="alein.gif" class="pic" alt="alein sticker" align="right">
   <div id="header" class="row container-fluid">
 <div class="col-sm-3">
 
  <h1 align="center">Jonathan's Blog</h1>
 	<a name="subtitle" href="/"> <h2> This is my third post</h2> </a>
 	<a name="date" href="/"> Posted Today </a> <br>
+	<a name="author" href="http://JonathanAumann.com" target="_blank">BY: Jonathan Aumann</a>
 </div>
 
     <div class="col-sm-6">
-	<a name="author" href="http://JonathanAumann.com" target="_blank">BY: Jonathan Aumann</a>
+	
 	</div>
 
 	</div>
@@ -26,7 +28,7 @@
 <div id="content">
 <marquee behavior="alternate">
 
-<img src="public/200.gif" alt="loop gif" align="middle">
+<img src="public/200.gif"  class="pic1" alt="loop gif" align="middle">
 
 </marquee>
 
@@ -41,7 +43,7 @@
         <p>"It is not an exaggeration to say that loops are the construct of our UNIVERSE"</p>
     </blockquote>
 	</aside>
-		<ul>
+		<ul class="list-unstyled">
 			 The 5 Best loops ever
 			<li>
 				1. The .each loop is dope
