--- a/boot.html
+++ b/boot.html
@@ -27,9 +27,9 @@
 
 
     <div id="logos" class="col-sm-6">
-    <a class="header-logo js-home-via-logo" href="/" aria-label="Trello Home"><span class="header-logo-loading">  </span><span class="header-logo-default"> </span>   </a>
+    	<a class="header-logo js-home-via-logo" href="/" aria-label="Trello Home"><span class="header-logo-loading">  </span><span class="header-logo-default"> </span>   </a>
 
-    <span class="header-logo-loading"></span>
+    	<span class="header-logo-loading"></span>
 
 
     </div>
@@ -55,11 +55,13 @@
     <div class="col-sm-3">
 <div class="board-menu js-fill-board-menu"><div class="board-menu-container">
 
-<div class="board-menu-header js-board-menu-title is-board-menu-default-view is-in-frame"><a class="board-menu-header-back-button icon-lg icon-back js-pop-widget-view" href="#" title="Go back.">
-	
-</a>
+<div class="board-menu-header js-board-menu-title is-board-menu-default-view is-in-frame">
+
+
+
 <h3 class="board-menu-header-title js-board-menu-title-text">Menu</h3>
-<a class="board-menu-header-close-button icon-lg icon-close js-hide-sidebar" href="#" title="Close the board menu."></a>
+<a class="board-menu-header-close-button icon-lg icon-close js-hide-sidebar" href="#" title="Close the board menu."> X</a>
+
 <hr class="board-menu-header-divider">
 
 
@@ -67,23 +69,139 @@
 <div class="board-menu-content-frame">
 <p class="error js-file-too-large" style="margin: 12px 0 6px; display:none;">File too large. 10mb limit.</p>
 <div class="board-menu-member-section js-list-members is-hidden is-partial-row">
-<div class="board-menu-member-section-header js-heading is-hidden"> Members 
-<div board-menu-member-section-header" style="position: fixed;  left: 380px; width: 100%;">
-     <ul>
+<div class="board-menu-member-section-header js-heading is-hidden"> Members   
+</div>
+<div class="board-menu-member-section js-list-members is-hidden is-partial-row">
+<hr class="board-menu-header-divider">
+<ul class="list-unstyled">
          <li class="active"><a href="#filter_cards" id="madd">Filter Cards</a></li>
          <li><a href="#more" id="more">More</a></li>
+         <hr class="board-menu-header-divider">
+      <li><p style="margin-right:300px"><a href="#activity" id="activity"><u>Activity</u></a></li>
+      <li><p style="margin-right:300px"> 
+
+      <div class="phenom mod-other-type">
+      <div class="phenom-creator">
+      <div class="member js-show-mem-menu" >
+      </div></div>
+
+      <div class="phenom-desc">
+      <img class="member-avatar" height="30" width="30" src="d.png" alt="member" title="member">The member moved Going live with server deployment from In Progress to Current Sprint</div>
+      <p class="phenom-meta quiet"><i class="date">Feb 22 at 10:36 PM</i></p> </div></p></li>
+               <hr class="board-menu-header-divider">
+<li><p style="margin-right:300px"> 
+
+      <div class="phenom mod-other-type">
+      <div class="phenom-creator">
+      <div class="member js-show-mem-menu" >
+      </div></div>
+
+      <div class="phenom-desc">
+      <img class="member-avatar" height="30" width="30" src="d.png" alt="member" title="member">The member archived another one. </div>
+      <p class="phenom-meta quiet"><i class="date">Feb 22 at 10:37 PM</i></p> </div></p></li>
+               <hr class="board-menu-header-divider">
+
       
      </ul>
+<div board-menu-member-section-header" style="position: fixed;  left: 380px; width: 100%;">
+   </div>
+
+   </p>
+   </li>
+   </ul>
+   </div>
 </div>  
+
+</div>
+</div>
 </div>
 
-<div class="u-clearfix js-list"></div>
 
+
+
+
+</div>
+
+
+<div class="js-list list-wrapper">
+<div class="list js-list-content">
+<div class="list-header js-list-header u-clearfix">
+<div class="list-header-target js-editing-target">
+	</div>
+
+	<div class="row" id="right">
+	<div class="col-sm-4">
+
+
+	<h2 class="list-header-name-assist js-list-name-assist" dir="auto">Current Sprint</h2>
+	<textarea class="list-header-name mod-list-name js-list-name-input" spellcheck="false" dir="auto" disabled="disabled" style="overflow: hidden; word-wrap: break-word; height: 24px;">Current Sprint</textarea>
+	<p class="list-header-num-cards hide js-num-cards">5 cards</p>
+	<div class="list-header-extras"><span class="list-header-extras-subscribe js-list-subscribed hide"><span class="icon-sm icon-subscribe"></span></span></div>
+	</div>
+	<div class="list-cards u-fancy-scrollbar u-clearfix js-list-cards">
+	<div class="list-card js-member-droppable ui-droppable">
+	<div class="list-card-cover js-card-cover"></div>
+	<div class="list-card-stickers-area hide"><div class="stickers js-card-stickers"></div>
+	</div>
+	<div class="list-card-details">
+	<div class="list-card-labels js-card-labels">
+	<span class="card-label card-label-sky mod-card-front" title="Government">Government</span>
+	<span class="card-label card-label-lime mod-card-front" title="Planning">Planning</span>
+	</div>
+	<a class="list-card-title js-card-name" dir="auto" href="/c/SdX7QRBS/5-going-live-with-server-deployment">
+	<span class="card-short-id hide">#5</span>
+	Going live with server deployment</a>
+	<div class="badges"><span></span></div>
+	<div class="list-card-members js-list-card-members"></div>
+	</div><p class="list-card-dropzone">Drop files to upload.</p>
+	</div>
+	<div class="list-card js-member-droppable ui-droppable">
+	<div class="list-card-cover js-card-cover"></div>
+	<div class="list-card-stickers-area hide">
+	<div class="stickers js-card-stickers"></div>
+	</div>
+	<div class="list-card-details">
+	<div class="list-card-labels js-card-labels">
+		
+	</div><a class="list-card-title js-card-name" dir="auto" href="/c/KKdAURYQ/7-google-adwords-list-of-referrers">
+	<span class="card-short-id hide">#7</span>
+	Google Adwords list of referrers</a>
+	<div class="badges"><span>
+	</span></div>
+	<div class="list-card-members js-list-card-members"></div>
+	</div><p class="list-card-dropzone">Drop files to upload.</p>
+	</div>
+	<div class="list-card js-member-droppable is-covered ui-droppable">
+	<div class="list-card-cover js-card-cover" style="height: 245px; background-image: url(&quot;https://trello-attachments.s3.amazonaws.com/54c9429a9ba22ac20ae179c8/600x600/70c1345b1a54f94a135ef2865f1faec5/shutterstock_190800527222.jpg&quot;); background-color: rgb(236, 244, 244); background-size: cover;"></div>
+	<div class="list-card-stickers-area hide">
+	<div class="stickers js-card-stickers" style="height: 245px;"	
+	</div>	
+	</div>
+	<div class="list-card-details">
+	<div class="list-card-labels js-card-labels">
+		
+	</div><a class="list-card-title js-card-name" dir="auto" href="/c/t5YaGU1q/9-it-solutions-page"><span class="card-short-id hide">#9</span>IT Solutions page</a>
+	<div class="badges">
+	<div title="Attachments" class="badge">
+	<span class="badge-icon icon-sm icon-attachment"></span>
+	<span class="badge-text">1</span></div><span></span>
+	</div><div class="list-card-members js-list-card-members"></div></div><p class="list-card-dropzone">Drop files to upload.</p></div><div class="list-card js-member-droppable ui-droppable"><div class="list-card-cover js-card-cover"></div><div class="list-card-stickers-area hide"><div class="stickers js-card-stickers"></div></div><div class="list-card-details"><div class="list-card-labels js-card-labels"></div><a class="list-card-title js-card-name" dir="auto" href="/c/6Rl5EX9Y/10-q3-webinar-content-planning"><span class="card-short-id hide">#10</span>Q3 Webinar Content Planning</a><div class="badges"><span></span></div><div class="list-card-members js-list-card-members"></div></div><p class="list-card-dropzone">Drop files to upload.</p></div><div class="list-card js-member-droppable ui-droppable"><div class="list-card-cover js-card-cover"></div><div class="list-card-stickers-area hide"><div class="stickers js-card-stickers"></div></div><div class="list-card-details"><div class="list-card-labels js-card-labels"><span class="card-label card-label-purple mod-card-front" title="Demand Marketing">Demand Marketing</span></div><a class="list-card-title js-card-name" dir="auto" href="/c/diNNX7If/11-email-campaign-february"><span class="card-short-id hide">#11</span>Email campaign - February</a><div class="badges"><span></span></div><div class="list-card-members js-list-card-members"></div></div><p class="list-card-dropzone">Drop files to upload.</p>
+	</div>
+	</div><a class="open-card-composer js-open-card-composer hide" href="#">Add a card…</a>
+
+
+
+	</div>
+	</div>
+
+
+
+<!-- 
 
 <div class="board-menu-member-section js-list-team-members is-partial-row">
 <div class="board-menu-member-section-header js-heading is-hidden">
     </div>
- </div><!-- board content -->
+ </div>
 <div class="board-wrapper is-show-menu"><div class="board-main-content"><div class="board-header u-clearfix js-board-header"> 
 <div class="board-main-content"> 
 
@@ -93,7 +211,7 @@
 </div>
 
 </div>
-</div>
+</div> -->
 
 
 
