add twitter boot

--- a/blog.html
+++ b/blog.html
@@ -70,7 +70,7 @@
 	<h2> Comments </h2>
 	<form action="/" method="post">
   <input type="text" name="name"
-      placeholder="your name" action="/post" method="post">
+      placeholder="Search Twitter" action="/post" method="post">
 </form>
 <form action="/" method="post">
   <input type="text" name="email"
